// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onChange should work 1`] = `
<div>
  <div
    class="input-group mb-3"
  >
    <div
      class="input-group-prepend"
    >
      <span
        class="input-group-text"
      >
        usd
      </span>
    </div>
    <input
      class="form-control"
      data-testid="HW10Input"
      name="usd"
      value="1"
    />
  </div>
</div>
`;

exports[`should have correct value 1`] = `
<div>
  <div
    class="input-group mb-3"
  >
    <div
      class="input-group-prepend"
    >
      <span
        class="input-group-text"
      >
        usd
      </span>
    </div>
    <input
      class="form-control"
      data-testid="HW10Input"
      name="usd"
      value="3"
    />
  </div>
</div>
`;
